--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <nav class="flex justify-between items-center h-16">
                 <!-- Logo/Name -->
-                <a href="#hero" class="text-2xl font-extrabold text-pink-900 dark:text-white transition duration-300 hover:text-violet-600 dark:hover:text-violet-400">
-                    Vignesh.<span class="text-pink-600 dark:text-pink-900">S</span>
+                <a href="#hero" class="text-2xl font-extrabold text-gray-900 dark:text-white transition duration-300 hover:text-violet-600 dark:hover:text-violet-400">
+                    Vignesh.<span class="text-pink-600 dark:text-gray-900">S</span>
                 </a>
                 <!-- Navigation Links and Theme Toggle -->
                 <div class="flex space-x-2 sm:space-x-4 items-center">
