--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <nav class="flex justify-between items-center h-16">
                 <!-- Logo/Name -->
                 <a href="#hero" class="text-2xl font-extrabold text-gray-900 dark:text-white transition duration-300 hover:text-violet-600 dark:hover:text-violet-400">
-                    Vignesh.<span class="text-pink-600 dark:text-white-900">S</span>
+                    Vignesh.<span class="text-white-600 dark:text-white-900">S</span>
                 </a>
                 <!-- Navigation Links and Theme Toggle -->
                 <div class="flex space-x-2 sm:space-x-4 items-center">
